k8s-gateway-api-vbeta/hi-hostname-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hi-hostname-api
  namespace: default
 
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /greet/hi
        pathType: Prefix
        backend:
          service:
            name: hi-hostname-api-service
            port:
              number: 80
